<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TP33</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="bienvenue">Bienvenue à l\'Application de Gestion des Contacts et des Appels téléphoniques</string>
    <string name="fonction">Cette application vous permet de lancer un menu d\'options</string>
    <string name="contacts">Contacts</string>
    <string name="appels">Appels</string>
    <string name="title_activity_add_contact">AddContact</string>
    <string name="title_activity_delete_contact">DeleteContact</string>
    <string name="title_activity_update_contact">UpdateContact</string>
    <string name="title_activity_onglet_appels">OngletAppels</string>
    <string name="o1">App_Abs</string>
    <string name="o2">App_Reçus</string>
    <string name="o3">App_Emis</string>
    <string name="nomC">Nom Contact</string>
    <string name="Ntel">numéro de téléphone</string>
    <string name="title_activity_send_sms">SendSMS</string>
    <string name="PhoneN">Phone Number</string>
    <string name="Msg">Message</string>
    <string name="send">SEND SMS</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_confirm_sms">ConfirmSMS</string>
    <string name="title_activity_intens_imp">IntensImp</string>
    <string name="title_activity_confirm_delete">ConfirmDelete</string>

</resources>